--- a/aiohttp_demo/README
+++ b/aiohttp_demo/README
@@ -1,3 +1,9 @@
-db.py - создание таблиц в БД MySQL
+db.py - создание таблиц в БД MySQL;
+init_db.py - инициализация подключения к БД;
+main.py - запуск проекта;
+middlewares.py - вывод ошибки 404;
+mydb.py - адрес для подключения к БД;
+routes.py - объявленные маршруты в адресной строке;
+views.py - выводимые данные при переходе по маршруту.
 Запуск кода:
 $python main.py
